# idc-transport-solver

./: .gitignore  .kateproject  CMakeLists.txt  Doxyfile  LICENSE  README.md  blackbody.pal  heatmap.gnuplot  heatmap_diff.gnuplot  idc.gnuplot  input.deck  lattice.deck  makefile
doxygen/: defines.h  mainpage.dox  postproc.dox  references.bib  siamplain.bst  solver.dox
make/: Makefile.intel14.gnu-7.3.0-mvapich2.inc  Makefile.sub1  Makefile.sub2  Makefile.sub3  Makefile.workstation.inc
notes/: objects.md  solvers.md
src/: main_deckmaker.cpp  main_postproc.cpp  main_solver.cpp
src/linear_solvers/: LinearAlgebra.c  LinearAlgebra.h  SIMD_LinearAlgebra.hpp
src/linear_solvers/Abstract/: ImplicitSolver.cpp  ImplicitSolver.hpp  SweepOperator.cpp  SweepOperator.hpp
src/linear_solvers/RKDG/: DSA_1d.cpp  sweep_3d.c
src/linear_solvers/STDG/: DSA_1d.cpp
src/objects/: DomainDecomposition.cpp  DomainDecomposition.hpp  SpatialDomain.cpp  SpatialDomain.hpp
src/objects/Abstract/: CrossSection.hpp  DensityFunction.cpp  DensityFunction.hpp  OrdinateFlux.cpp  OrdinateFlux.hpp
src/objects/RKDG/: CrossSection.cpp  CrossSection.hpp  DensityFunction.cpp  DensityFunction.hpp  OrdinateFlux.cpp  OrdinateFlux.hpp  ScalarFlux.hpp
src/objects/STDG/: DensityFunction.cpp  (+4 more)
src/operators/: RelabelOperator.cpp  RelabelOperator.hpp  TransportOperator.hpp
src/utils/: BelosTpetraInterface.hpp  CLog.cpp  CLog.hpp  DirectedGraph.hpp  MVWrapper.hpp  Mollifier.cpp  Mollifier.hpp  NDArray.hpp  PETScInterface.hpp  ParameterList.cpp  ParameterList.hpp  SIMD.hpp  Walltimer.cpp  Walltimer.hpp  bitmask_operators.hpp  global.cpp  global.hpp  init.cpp  init.hpp  job_scripts.hpp
(+104 files in other folders)
